@@ -1,3 +1,8 @@
+2005-03-15  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* network.pl.in: leave only wireless-* and remove wireless_* (for
+	handled wi-fi options, the rest will remain untouched)
+
 2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* Release 1.2.0
